style.css
body {
  background-image: url("/Thumbs/yarn.jpg");
  background-color: #cccccc;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-blend-mode: hard-light;
  font-family: Helvetica, sans-serif;
}

.topnav {
  overflow: hidden;
  background-color: #cccccc;
  width: 50%;
}

.topnav a {
  float: left;
  color: #3a4660;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size; 17px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.topnav a.active {
  background-color: #3a4660;
  color: white;
}

.banner {
  width: 698px;
  height: 200px;
  display: block;
  margin: 30px auto;
  opacity: 0.9;
  border-style: inset;
}

.tagline h1 {
  align-self: center;
  text-align: center;
  color: #3a4660;
  background-color: #cccccc;
  width: 70%;
  margin: auto auto 15px auto;
}

.welcome {
  font-size: 24px;
  display: block;
  margin: 10px auto;
  text-align: center;
  color: black;
}

.welcomeContainer {
  background-color: #cccccc;
  opacity: 0.9;
  margin: auto 30px;
  border-style: inset;
  max-height: 200px;
}

.commissionContainer {
  background-color: white;
  margin: auto 30px;
  border-style: inset;
}

.products {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 100%;
  flex-wrap: wrap;
  margin: 20px 50px;;
}

.product {
  display: inline-block;
  padding: 10px;
  height: auto;
  background-color: white;
  opacity: 0.8;
  border-style: inset;
  margin: 10px;
  width: 270px;
}


.product h4 {
  display: flex;
  justify-content: center;
}


.product img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.figures {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}


/*Commissions carouselbox*/

.commissions {
  width: 400px;
  height: 440px;
  overflow: hidden;
  padding-top: 40px;
  margin: 0 auto;
  position: relative;
}

.commission {
  position: absolute;
  width: 100%;
  height: 100%;
  transform: translateX(0);
  transition: transform 0.5s;
  text-align: center;
}

.commissionHide {
  transform: translateX(100%);
}

.commission h4 {
  text-align: center;
}

.commission img {
  margin: 0 auto;
}

.hidden {
  display: none;
}

.shown {
  opacity: 1;
}

.fade {
  transition: opacity 2s;
}

/*Contact Page*/
.contactAndEventsContainer {
  display: flex;
  margin-top: 50px;
}

/*contact Form */

.contactFormOverallContainer {
  width: 600px;
  height:
}

.contactLegendContainer {
  padding: 10px;
  background-color: white;
  opacity: 0.6;
  margin: auto auto 10px auto;
  text-align: center;
}

.contactLegend {
  width: 100px;
  margin: auto;
  font-size: 20px;

}

.contactInputBox1 {
  margin-left: 60px;
  padding: 5px;
  margin-bottom: 10px;
  width: 82%;
}

.contactInputBox2 {
  margin-left: 26px;
  padding: 5px;
  margin-bottom: 10px;
  width: 82%;
}

.contactInputBox3 {
  padding: 5px;
  margin-bottom: 10px;
  width: 82%;
  height: 200px;
}

.fiddlyText {
  position:relative;
  bottom: 195px;
}

.contactSubmitButton {
  width: 65px;
  height: 28px;
  text-align: center;
  font-size: 16px;
  border-radius: 6px;
}

/*Events section*/

.eventContainer {
  width: 600px;
  border-width: 2px;
  border-color: "threedface";
  border-style: groove;
  padding: 8px;
  margin-left: 50px;
}

.event1 {
  background-color: #FFFFFF;
}

.event2 {
  background-color: #DCDCDC;
}

.event img {
  height: 50px;
  width: 50px;
  margin: 10px auto auto 20px;
  position: absolute;
}

.eventTitle {
  text-align: center;
  font-size: 20px;
  background-color: white;
  opacity: 0.6;
  padding: 10px;
  margin: auto auto 10px auto;
}

.event p {
  margin: auto auto 0px 100px;
  padding: 0px 0px 10px 0px;
}

.event a {
  position: relative;
  left: 100px;
  top: 5px;
  font-size: 16px;
  vertical-align: top;
  color: #8B8378;
}

.date {
  font-size: 10pt;
  font-weight: bold;
  color: #696969;
  position: relative;
  top: 5px;
}

.venue {
  font-size: 10pt;
  font-weight: bold;
  color: #696969;
  vertical-align: top;
  position: relative;
  bottom: 5px;
}

/* Admin Page */
.adminFormOverallContainer {
  width: 100%;
  margin: auto;
}

.adminLegend {
  margin: auto;
  font-size: 20px;
  width: 100%;
}

label {
  margin: 10px 10px auto auto;
  display: inline-block;
}

input, select {
  display: inline-block;
}

.platinumPricing label, .platinumPricing input {
  display: block;
  margin-left: 100px;
}




//*
<style type="text/css">
<!--
.style3 {font-size: 24px; font-weight: bold; font-style: italic; }
.style4 {
	font-size: 18px;
	font-weight: bold;
}
.style6 {font-size: 24px; }
.style7 {font-size: 36px}
body {
	background-image: url(pussbg.jpg);
	background-repeat: repeat;
}

.carouselContainer {
  width: 100%;
  background-color: silver;
  border-radius: 45px;
}

.carouselbox {
  font-family: Helvetica, sans-serif;
  font-size: 14px;
  width: 400px;
  position: relative;
  margin-top: 80px;
  border: 1px solid #ccc;
  box-shadow: 2px 3px 10px #ccc;
  overflow: hidden;
  margin-left: auto;
  margin-right: auto;
  background-color: silver;
  opacity: 0.8;
}

.content {
  margin: 0;
  padding: 0;
  width: 1300px;
  overflow: hidden;
  position: relative;
}

.transitioning {
  transition: margin-left 2s;
}


.content li {
  font-size: 100px;
  display: inline-block;
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
  width: 400px;
}

.carouselbox .active {
  height: 130px;
  color: blue;
}

.carouselbox .active li {
  position: absolute;
  top: 200px;
}

.carouselbox .active li.current {
  top: 30px;
}

.carouselbox .active .buttons {
  padding: 5px 0;
  background: #eee;
  text-align: center;
  z-index: 10;
  position: relative;
}

.carouselbox .button {
  border: none;
  display: none;
}

.carouselbox .active .button {
  display: block;
}

.offscreen {
  position: absolute;
  left: -2000px;
}
-->
</style>

